@@ -7,6 +7,7 @@ version 0.8.5 - Not released, available at https://simupop.svn.sourceforge.net/s
   - BUG: fix a bug that prevents a cloned simulator from evolving again.
   - NEW: add parameter numMale and sexMode to all offspring generator and
 		mating schemes, to control the sex of offspring exactly.
+  - NEW: add conversion to recombinator, using parameter convMode, convProb and convParam.
 
 version 0.8.4 - (Rev 1456) Mar 8, 2008
   - NEW: add support for other posix systems like HP-UX
